--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "webpack": "webpack"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
-    "morgan": "~1.8.1",
-
-    "serve-favicon": "~2.4.2",
     "monk": "^3.1.3",
+    "morgan": "~1.8.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "semantic-ui-react": "^0.72.0",
