--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-fileupload": "^0.2.0",
     "jade": "~1.11.0",
     "monk": "^3.1.3",
     "morgan": "~1.8.1",
