--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.18.1",
     "monk": "^3.1.3",
     "morgan": "~1.8.1",
+    "nodemailer": "^4.1.0",
     "react": "^15.6.1",
     "react-datepicker": "^0.54.0",
     "react-dom": "^15.6.1",
